--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "noramp-nrkit",
+  "name": "noramp-norampkit",
   "author": "noramp",
-  "module": "dist/noramp-nrkit.esm.js",
+  "module": "dist/noramp-norampkit.esm.js",
   "size-limit": [
     {
-      "path": "dist/noramp-nrkit.cjs.production.min.js",
+      "path": "dist/noramp-norampkit.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/noramp-nrkit.esm.js",
+      "path": "dist/noramp-norampkit.esm.js",
       "limit": "10 KB"
     }
   ],
