--- a/example/package.json
+++ b/example/package.json
@@ -19,8 +19,8 @@
   "devDependencies": {
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
+    "typescript": "^4",
     "vite": "latest",
-    "vite-preset-react": "latest",
-    "typescript": "^4"
+    "vite-preset-react": "latest"
   }
 }
